Adding pagination to product price service